ajout d'un paragraphe

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             sequi corporis, ea explicabo veritatis
             nesciunt quaerat!
         </p>
+
+
+        <p>J'ai ajouté ce paragraphe ! en local</p>
     </div>
     
 </body>
